# 20260306_ec2-test1

./: pyproject.toml
.research/: research_history.json
config/: config.yaml
config/run/: comparative-0-sc-gsm8k.yaml  proposed-bvcot-gsm8k.yaml
src/: evaluate.py  inference.py  main.py  model.py  preprocess.py
